CSS color gets adjusted for disabled input elements https://bugs.webkit.org/show_bug.cgi?id=54643

Patch by Yosifumi Inoue <yosin@chromium.org> on 2011-12-07
Reviewed by Kent Tamura.

Source/WebCore:

No new tests. covered by existing tests. Need rebasing some existing tests for Chromimum.

Remove automatic color adjustment for disabled text control for Chromimum.

* css/themeChromium.css: Add CSS entries for default style for disabled input and textarea elements.
* WebCore/rendering/RenderTextControl.cpp:
(disabledTextColor): Removed for PLATFORM(CHROMIUM)
(RenderTextControl::adjustInnerTextStyle): Don't call disabledTextColor for Chromium.

LayoutTests:

* platform/chromium/test_expectations.txt: Add files need to be updated.

Canonical link: https://commits.webkit.org/90735@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102320 268f45cc-cd09-0410-ab3c-d52691b4dbfc